<resources>
    <string name="app_name">Hodler</string>
    <string name="select_coins">Select coins</string>
    <string name="description_select_coins">Select coins</string>
    <string name="selected_number_of_coins">Selected %1$d</string>
    <string name="no_coins_selected">No coins selected</string>
    <string name="search">Search</string>
    <string name="description_add_transaction">Add transaction</string>
    <string name="add_transaction">Add transaction</string>
    <string name="add">Add</string>
    <string name="label_amount">Amount</string>
    <string name="label_price">Price</string>
    <string name="total_value">Total</string>
    <string name="change_daily">(%1$s%%)</string>
    <string name="transaction_sell">Sell</string>
    <string name="transaction_buy">Buy</string>
    <string name="remove_transaction">Remove transaction</string>
    <string name="dialog_remove_transaction_title">Remove transaction?</string>
    <string name="dialog_remove_transaction_message">Are you sure you want to remove this transaction?</string>
    <string name="dialog_remove_transaction_cancel">Cancel</string>
    <string name="dialog_remove_transaction_remove">Remove</string>
    <string name="label_price_per_unit">Price per unit</string>
    <string name="label_price_total">Price total</string>
    <string name="description_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_general_title">General settings</string>
    <string name="settings_general_summary">These settings allow you to customize how the app looks and behaves.</string>

    <string name="settings_select_main_currency_code">Main currency</string>
    <string name="settings_select_currency_codes">Additional currencies</string>

    <string name="selected_preference">Selected: %1$s</string>
    <string name="nothing_selected_preference">Nothing selected</string>
    <string name="none_selected_preference">None selected</string>
    <string name="settings">Settings</string>
    <string name="percent_change">(%1$s%%)</string>
</resources>
