<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/button_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <Switch
            android:id="@+id/switch_transaction_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textColorHighlight="@color/colorWhite"
            android:textOff="@string/transaction_sell"
            android:textOn="@string/transaction_buy" />

        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_amount"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/edit_price_per_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_price_per_unit"
            android:inputType="numberDecimal|numberSigned" />

        <EditText
            android:id="@+id/edit_price_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_price_total"
            android:inputType="numberDecimal|numberSigned" />

        <Button
            android:id="@+id/button_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Today at 03:24pm" />

        <Spinner
            android:id="@+id/spinner_exchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
